--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
     "husky": "^7.0.4",
+    "minimist": "^1.2.6",
     "nice-color-palettes": "^3.0.0",
     "node-forge": "^1.3.1",
     "nth-check": "^2.0.1",
